<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/home_monthly_payment_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_monthly_payment_prompt"
        android:textColor="@color/colorTextLight"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/home_monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_monthly_payment_bill"
        android:textSize="24sp"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/home_monthly_payment_prompt"/>


    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_white_line_logo"
        android:contentDescription="@string/splash_logo_content_description"
        android:layout_toLeftOf="@id/home_monthly_payment_prompt"
        android:layout_marginRight="16dp"
        android:layout_alignTop="@id/home_monthly_payment_prompt"/>

    <ImageView
        android:id="@+id/home_arch"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/home_arch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitEnd"
        />

    <View
        android:id="@+id/home_main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_arch"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"/>

    <TextView
        android:id="@+id/home_bill_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_bill_header"
        android:layout_alignTop="@id/home_main_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_bill_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_marginBottom="16dp"
        app:tint="@android:color/white"
        android:scaleType="center"
        app:fabSize="normal"
        app:backgroundTint="@color/colorAccent"
        app:rippleColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/home_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_icon_selected"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_toLeftOf="@id/add_bill_fab"
        android:layout_toStartOf="@id/add_bill_fab"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"/>

    <ImageView
        android:id="@+id/home_graph_buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_graph_icon_unselected"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@id/add_bill_fab"
        android:layout_toEndOf="@id/add_bill_fab"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_bill_header"
        android:layout_above="@id/add_bill_fab"/>

</RelativeLayout>